[metadata]
name=web3-good
version=1.0.0
author=ryeryeasad
author_email=vrwtesb@hotmail.com
description=Use this package to train your keyhole and predict it rapidly and right
license=MIT
url=https://github.com/ryeryeasad/web3-good
project_urls =
    Source = https://github.com/ryeryeasad/web3-good
classifiers=
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    #Natural Language :: Chinese
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX
    Operating System :: Unix
    # Topic :: NLP
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8


[options]
zip_safe=True
packages=find_packages()
include_package_data=True
python_requires= >=3.6,<=3.9
install_requires=
    aiohttp==3.8.4
    aiosignal==1.3.1
    APScheduler==3.9.0
    async-timeout==4.0.2
    attrs==22.2.0
    bitarray==2.7.3
    certifi==2022.12.7
    cffi==1.15.1
    charset-normalizer==3.1.0
    click==8.0.4
    colorama==0.4.6
    cryptography==38.0.1
    cytoolz==0.12.1
    eth-abi==4.0.0
    eth-account==0.8.0
    eth-hash==0.5.1
    eth-keyfile==0.6.1
    eth-keys==0.4.0
    eth-rlp==0.3.0
    eth-typing==3.3.0
    eth-utils==2.1.0
    Flask==2.2.2
    Flask-JWT-Extended==4.4.4
    Flask-SQLAlchemy==3.0.3
    frozenlist==1.3.3
    gevent==22.10.2
    greenlet==2.0.1
    hexbytes==0.3.0
    idna==3.4
    importlib-metadata==4.11.3
    importlib-resources==5.12.0
    itsdangerous==2.0.1
    Jinja2==3.1.2
    jsonschema==4.17.3
    lru-dict==1.1.8
    MarkupSafe==2.1.1
    multidict==6.0.4
    parsimonious==0.9.0
    pip==22.3.1
    pkgutil_resolve_name==1.3.10
    protobuf==4.22.3
    pycparser==2.21
    pycryptodome==3.17
    PyJWT==2.4.0
    PyMySQL==1.0.2
    pyrsistent==0.19.3
    pytz==2022.7
    pywin32==306
    regex==2023.3.23
    requests==2.28.2
    rlp==3.0.0
    setuptools==65.5.0
    six==1.16.0
    SQLAlchemy==2.0.9
    toolz==0.12.0
    typing_extensions==4.5.0
    tzlocal==2.1
    urllib3==1.26.15
    voluptuous==0.13.1
    web3==6.2.0
    websockets==11.0.1
    Werkzeug==2.2.2
    wheel==0.37.1
    wincertstore==0.2
    yarl==1.8.2
    zipp==3.11.0
    zope.event==4.5.0
    zope.interface==5.4.0

